crates/plotnik-tests/tests/03-analyze/mutual_recursion/no_progress_cycle.txt
A = [
  (B)
  (x)
]

B = (A)
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle makes no progress
 --> query.ptk:6:6
  |
2 |   (B)
  |    - references B (completing cycle)
...
6 | B = (A)
  | -----^-
  | |    |
  | |    references A
  | B is defined here
  |
help: match at least one syntax-tree node before recursing
help: make every path through this cycle match a syntax-tree node before it returns to `B`
-------------------- SYMBOLS ---------------------
A
  B
    A (cycle)
B
  A
    B (cycle)
